Fix Css on Header, home page and single review page so that the padding, aligniment and size of the cards and thier contents are more user friendly

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,13 @@ select {
 
 /* ------------------------ Header ---------------------- */
 
+.Logged-in-user {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 @media screen and (max-width: 600px) {
   .header {
     text-align: center;
@@ -96,6 +103,10 @@ select {
     font-weight: 900;
     font-size: 14px;
     background-color: white;
+  }
+
+  .Logout-button {
+    margin-left: 20px;
   }
 }
 
@@ -126,6 +137,10 @@ select {
     font-weight: 900;
     font-size: 14px;
     background-color: white;
+  }
+
+  .Logout-button {
+    margin-left: 20px;
   }
 }
 
@@ -158,9 +173,50 @@ select {
 
 .white-text {
   color: white;
-  font-size: 16px;
+  font-size: 15px;
+  padding-left: 10px;
+  margin: 0px;
+}
+img.MuiAvatar-img.css-1pqm26d-MuiAvatar-img {
+  width: 100%;
+  height: 100%;
+  text-align: cente;
+  object-fit: scale-down;
+  background-color: white;
+
+  text-indent: 10000px;
+}
+h2.list-title {
+  margin-bottom: 0;
+  padding-top: 1%;
+  padding-bottom: 6%;
+}
+.main-title {
+}
+/* ------------------------ User Card List ---------------------- */
+
+.user-title {
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+
+.user {
+  padding-left: 0px;
+  margin: 0;
+  font-family: "manrope";
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.43;
+  letter-spacing: 0.01071em;
+  color: #666666;
+  margin-bottom: 25px;
+}
+
+.Login-Button {
+  margin-left: 0px;
 }
 /* ------------------------ Review Card List ---------------------- */
+
 li {
   margin-bottom: 2%;
 }
@@ -209,23 +265,30 @@ p.css-r40f8v-MuiTypography-root {
 }
 
 .comment-icon {
-  margin-left: 32px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+
 }
 
 .vote-icon {
   display: flex;
-  margin-right: 35px;
+  margin-right: 32px;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-around;
+  align-items: center;
+  width: 26px;
 }
 .icon {
-  width: 100%;
   font-family: "manrope";
   font-weight: 400;
   font-size: 0.7rem;
   line-height: 1.43;
   letter-spacing: 0.01071em;
   color: #666666;
+  width: 35px
 }
 
 .Read-More {
@@ -267,7 +330,7 @@ p.css-r40f8v-MuiTypography-root {
     margin-bottom: 3vh;
     margin-top: 2vh;
     width: 280px;
-    height: 600px;
+    height: 365px;
     color: #333333;
     padding: 30px;
     align-items: flex-start;
@@ -312,13 +375,13 @@ div.css-1mktp8m-MuiTypography-root {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 /* ------------------------ Nav ---------------------- */
 
 .Nav {
-  padding: 6%;
+  padding: 5%;
   display: flex;
   justify-content: space-evenly;
 }
@@ -403,17 +466,33 @@ div.css-1mktp8m-MuiTypography-root {
 
 .emphasise {
   color: #d2042d;
+  font-size: 14px;
+  margin-bottom: 0%;
+  margin-right: 0;
 }
 
 .sub-info {
   font-size: 14px;
-  margin-bottom: 2%;
+  margin-bottom: 0%;
+  color: #666666;
+  margin-right: 0;
 }
 
 .body {
   padding: 10%;
   text-align: left;
   margin: 0px;
+}
+
+.comment-title {
+  padding: 7%;
+  margin: 0;
+  text-align: center;
+}
+
+hr#title-divider {
+  margin-top: 10%;
+  margin-bottom: 0;
 }
 
 /* ------------------------ Votes ---------------------- */
@@ -427,7 +506,7 @@ div.css-1mktp8m-MuiTypography-root {
 }
 
 .votes-title {
-  margin-top: 5%;
+  margin-top: 2%;
   font-size: 16px;
   font-weight: 600;
 }
@@ -505,6 +584,15 @@ div.css-1mktp8m-MuiTypography-root {
   margin-bottom: 0;
 }
 /* ------------------------ CommentCard ---------------------- */
+li.comment-list-item {
+  list-style: none;
+  padding-top: 10%;
+  padding-left: 15%;
+  padding-right: 15%;
+  text-align: left;
+  margin: 0;
+}
+
 li {
   list-style: none;
   padding: 0px;
@@ -541,13 +629,22 @@ ul {
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: space-between;
+  margin-bottom: 10%;
+  align-items: center;
+}
+
+.comment-vote-buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #divider {
-  margin-top: 15%;
-  margin-bottom: 15%;
+  margin: 0;
   border-color: #ababab;
 }
 
